# enterprise-policy-rag

./: .gitignore  README.md  TODO.md  docker-compose.low-resource.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  vercel.json
.ai-runs/2026-05-20-1009-phase1-retrieval-core/: agent-plan.md  changed-files.md  decisions.md  (+2 more)
app/: __init__.py  answer.py  auth.py  chunking.py  demo_data.py  eval_runs.py  evaluation.py  main.py  models.py  operations.py  personas.py  providers.py  query_logs.py  repository.py  retrieval.py  runtime.py  services.py
docs/: api-data-model.md  next-agent-bootstrap.md  portfolio-interview-guide.md  portfolio-one-pager.md  project-tracking.md
scripts/: capture-portfolio-screenshots.mjs  check-package-manager.mjs  openai_live_smoke.py  portfolio_evidence.py  run-web-task.mjs  smoke-static-demo.mjs  verify_postgres_schema.py
tests/: conftest.py  test_admin_workflow.py  test_answer_api.py  test_api_retrieval.py  test_auth_context.py  test_auth_gate.py  test_chunking.py  test_documents_api.py  test_eval_api.py  test_eval_runs.py  test_fake_embedding_provider.py  test_openai_live_smoke.py  test_operations_api.py  test_packaging_config.py  test_personas_api.py  test_portfolio_evidence.py  test_postgres_repository.py  test_postgres_repository_integration.py  test_postgres_runtime_integration.py  test_provider_selection.py  test_query_logs.py  test_retrieval_metadata_api.py  test_retrieval_permissions.py  test_runtime_storage.py  test_verify_postgres_schema.py
web/: index.html  package.json  vite.config.ts
(+202 files in other folders)
